force-app/main/default/objects/Consultant__c/Consultant__c.object-meta.xml
<CustomObject>
    <description>[Dharmesh 09/12]: This object is created for Requirement # 123. Please do not delete.</description>
    <label>Consultant</label>
    <nameField>
        <label>Consultant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consultants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>