force-app/main/default/objects/Consultant__c/fields/Age_of_Record__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Record__c</fullName>
    <formula>NOW() -  CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age of Record</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>