force-app/main/default/objects/Consultant__c/fields/Alt_Phone__c.field-meta.xml
<CustomField>
    <fullName>Alt_Phone__c</fullName>
    <label>Alt Phone</label>
    <type>Phone</type>
</CustomField>