force-app/main/default/objects/Consultant__c/fields/Eligible_for_bonus__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_bonus__c</fullName>
    <formula>IF(Salary__c &gt; 100000 &amp;&amp; Experience__c &gt; 365, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible for bonus</label>
    <type>Checkbox</type>
</CustomField>