force-app/main/default/objects/Consultant__c/fields/Eligible_for_promotion__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_promotion__c</fullName>
    <formula>IF(AND(ISPICKVAL( Type__c , &quot;Employee&quot;),Salary__c &gt; 100000,Experience__c &gt; 365), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible for promotion</label>
    <type>Checkbox</type>
</CustomField>