force-app/main/default/objects/Consultant__c/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <displayFormat>CON-{0000}</displayFormat>
    <label>Employee ID</label>
    <type>AutoNumber</type>
</CustomField>