force-app/main/default/objects/Consultant__c/validationRules/IsTypeEmployee.validationRule-meta.xml
<ValidationRule>
    <fullName>IsTypeEmployee</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Type__c , &#39;Employee&#39;),ISBLANK( Phone__c ))</errorConditionFormula>
    <errorMessage>Phone number is mandatory for employees.</errorMessage>
</ValidationRule>